fix hero spacing

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ code {
   width: 50rem;
   height: 25rem;
   flex-shrink: 0;
-  margin-top: 5%;
-  margin-left: 2%;
+  margin-top: 8rem;
+  margin-left: 3rem;
 }
 
 #heroTitle {
@@ -196,8 +196,8 @@ li {
     width: 12rem;
     height: 10rem;
     flex-shrink: 0;
-    margin-top: 10%;
-    margin-left: 2%;
+    margin-top: 13rem;
+    margin-left: 1rem;
   }
   
   #heroTitle {
